# beanstalk-test

./: CHANGELOG.md  README.md  beanstalk-test.cabal  cabal.project  consumer.py  docker-compose.yml  producer.py  pyproject.toml
app/: Main.hs
