[tool.poetry]
name = "beanstalk-test"
version = "0.1.0"
description = "Toy examples of beanstalkd producers and consumers"
authors = ["James Collier <james.collier@vib.be>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.7"
aiostalk = "^1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
